--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -4,6 +4,6 @@
 }
 
 .Resume iframe {
-    height: 140vh;
-    width: 110vh;
+    height: 1025px;
+    width: 780px;
 }
